--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoumic</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div class="half">
+            <h1>Stay Focused On</h1>
+            <h1 class="orange-color">Mission 2022</h1>
+            <p>I am new web developer.<br>
+                My mission is to learn html,css,javascript.<br>
+                Here is my linked in account</p><br>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/shoumic-ahmed-486882142/">Explore
+                now</a><br>
+            <p>Scroll down to explore more about us</p>
+        </div>
+        <div class="half">
+            <img src="person-2.png" alt="background pic">
+        </div>
+    </section>
 </body>
+
 </html>
