--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
 <body>
     <section>
         <div class="half">
-            <h1>Stay Focused On</h1>
-            <h1 class="orange-color">Mission 2022</h1>
-            <p>I am new web developer.<br>
+            <div class="bar">
+                <h1 id="black">Stay Focused On</h1>
+                <h1 class="orange-color">Mission 2022</h1>
+
+            </div>
+
+
+            <p>I am a new web developer.<br>
                 My mission is to learn html,css,javascript.<br>
-                Here is my linked in account</p><br>
+                Here is my linked in account. Please explore.</p><br>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/shoumic-ahmed-486882142/">Explore
                 now</a><br>
             <p>Scroll down to explore more about us</p>
@@ -28,6 +33,22 @@
             <img src="person-2.png" alt="background pic">
         </div>
     </section>
+
+    <h2 id="center">My Mission in <span class="h2tag">2022</span></h2>
+    <section>
+        <div class="one-third">
+            <img src="illustrator-1.png" alt="">
+            <h3>mission</h3>
+        </div>
+        <div class="one-third">
+            <img src="illustrator-2.png" alt="">
+            <h3>vision</h3>
+        </div>
+        <div class="one-third"><img src="illustrator-3.png" alt="">
+            <h3>goals</h3>
+        </div>
+    </section>
+
 </body>
 
 </html>
