--- a/index.html
+++ b/index.html
@@ -36,16 +36,24 @@
 
     <h2 id="center">My Mission in <span class="h2tag">2022</span></h2>
     <section>
-        <div class="one-third">
+        <div class="one-third" id="left-part">
             <img src="illustrator-1.png" alt="">
             <h3>mission</h3>
+            <p>My mission is to learn html,css,javascript.programming is my passion.I want to be a successful
+                programmer.At the end of the year I want to open a start up.I want to design my own business website.
+            </p>
         </div>
-        <div class="one-third">
+        <div class="one-third" id="center-part">
             <img src="illustrator-2.png" alt="">
             <h3>vision</h3>
+            <p>A vision statement is like a photograph of your future business, which gives your business shape and
+                direction. A vision statement provides the direction and describes what the founder wants the
+                organization to achieve in the future; it's more about the “what” of a business.</p>
         </div>
-        <div class="one-third"><img src="illustrator-3.png" alt="">
+        <div class="one-third" id="right-part"><img src="illustrator-3.png" alt="">
             <h3>goals</h3>
+            <p>my goal is to be a successful entrepreneur.I want to help people with my business.That's why I need a
+                website.I hope I will be able to design my website.</p>
         </div>
     </section>
 
