--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
                 website.I hope I will be able to design my website.</p>
         </div>
     </section>
+    <section>
+        <div class="width-half" id="background2"><img src="coding.png" alt="">
+        </div>
+        <div class="width-half">
+            <h2>Develop</h2>
+            <h2> Without Limits</h2>
+            <p>Another reason to become a Software Developer is the varied work structure which is project-based.Each
+                new project that you work on brings a whole new set of challenges and gives you the opportunity to
+                learn about new technologies, different systems, and explore various parts of the business.</p><br>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/shoumic-ahmed-486882142/">Read the
+                documentation</a>
+
+        </div>
+
+    </section>
 
 </body>
 
