--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
         </div>
 
     </section>
+    <section>
+        <div class="global">
+            <h2>Know our</h2>
+            <h2>Global community</h2>
+            <p>global community. n. (Government, Politics & Diplomacy) the people or nations of the world, considered as
+                being closely connected by modern telecommunications and as being economically, socially, and
+                politically interdependent.</p><br><a class="link-button" target="_blank"
+                href="https://www.linkedin.com/in/shoumic-ahmed-486882142/">Read the
+                documentation</a>
+
+        </div>
+        <div class="global" id="background3"><img src="project.png" alt=""></div>
+    </section>
 
 </body>
 
