--- a/index.html
+++ b/index.html
@@ -84,6 +84,26 @@
         </div>
         <div class="global" id="background3"><img src="project.png" alt=""></div>
     </section>
+    <h2 id="center">Portfolio app <span class="h2tag">Development</span></h2>
+    <section>
+        <div class="width-half" id="background2"><img src="20160927051106-Apps.jpeg" alt="">
+        </div>
+        <div class="width-half">
+            <h2 id="align">Keep your mind</h2>
+            <h2> and brain</h2><span class="h2tag"></span>Developed</h2>
+            <p>All the apps are being developed make our life very easy.We can get all the important feature that can
+                not be thought a few years ago.So we should evolve ourselves and learn how to use them properly. </p>
+            <br>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/shoumic-ahmed-486882142/">App
+                Discussion</a>
+
+        </div>
+
+    </section>
+    <footer>
+
+    </footer>
+
 
 </body>
 
