--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 
     </section>
     <footer>
+        <div class="text-white">
+
+            <h2>mission <span id="red">2022</span></h2>
+            <p>Hard work, Perseverance, and Determination for 2022</p>
+        </div>
+
 
     </footer>
 
